<resources>
    <string name="app_name">数字身份</string>
    <string name="pwd_login">密码登录</string>
    <string name="verification_login">验证码登录</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="phone_num">手机号</string>
    <string name="verification">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="retry_verification_code">重新获取验证码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="block_chain_develop_service_zh">区块链服务平台</string>
    <string name="block_chain_develop_service_en">Inspur BlockChain Develop Service</string>
    <string name="register">注册</string>
    <string name="register_new_user">注册新用户</string>
    <string name="name">姓名</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="preview">预览</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_v_code">请输入验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_confirm_new_password">请确认新密码</string>
    <string name="email">邮箱</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="nick_name">昵称</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="scan_code">扫码</string>
    <string name="receive_voucher">接收凭证</string>
    <string name="mine_voucher">我的凭证</string>
    <string name="voucher">凭证</string>
    <string name="voucher_description">凭证描述</string>
    <string name="voucher_detail">凭证详情</string>
    <string name="marks_left_on_the_chain">本次验证已上链留痕</string>
    <string name="selective_disclosure">选择性披露</string>
    <string name="trace_verification">验证留痕</string>
    <string name="the_voucher_of_max_verification">验证次数最多的凭证</string>
    <string name="see">查看</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="total_count">共1个</string>
    <string name="type">类型</string>
    <string name="id_card">身份证</string>
    <string name="drive_card">驾照</string>
    <string name="id_card_num">身份证号</string>
    <string name="request">申请</string>
    <string name="please_choose">请选择</string>
    <string name="nation">民族</string>
    <string name="location">地址</string>
    
    <string name="please_input_your_name">请输入姓名</string>
    <string name="please_input_your_nation">请输入民族</string>
    <string name="please_input_your_location">请输入地址</string>
    <string name="please_input_your_id_number">请输入身份证号</string>
    <string name="please_input_voucher_description">请输入凭证描述</string>

    <string name="show">出示</string>
    <string name="select_properties">选择属性</string>
    <string name="total_properties">全部属性</string>
    <string name="property_preview">属性预览</string>
    <string name="the_following_properties_will_be_verified">将验证如下属性</string>
    <string name="set_receive_voucher_properties">接收属性设置</string>
    <string name="voucher_type">凭证类型</string>
    <string name="receive_type">接收类型</string>
    <string name="receive_property">接收属性</string>
    <string name="receive_qr_code">接收码</string>
    <string name="verify_property">验证属性</string>
    <string name="verify_record">验证记录</string>
    <string name="details">详情</string>
    <string name="delete">删除</string>
    <string name="are_you_sure_to_delete_voucher">确定要删除凭证吗？</string>
</resources>
