<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.inspur.lib_base.view.TitleView
        android:id="@+id/title_set_receive_voucher_properties"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:ttTitleText="@string/set_receive_voucher_properties"
        app:ttLeftDrawable="@mipmap/ic_nav_back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:padding="15dp"
        android:overScrollMode="never"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_set_receive_voucher_properties">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextLightBlackTheme"
                android:layout_marginBottom="8dp"
                android:text="@string/voucher_type"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:background="@drawable/shape_circle_white_bg">
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_voucher_id_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbChecked="true"
                    app:fcbTitleText="@string/id_card"/>
                <View
                    style="@style/CommonItemLine"/>
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_voucher_drive_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbTitleText="@string/drive_card" />
            </LinearLayout>
            <TextView
                style="@style/TextLightBlackTheme"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/receive_type"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:background="@drawable/shape_circle_white_bg">
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_voucher_total_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbTitleText="@string/total_properties"
                    app:fcbChecked="true" />
                <View
                    style="@style/CommonItemLine"/>
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_voucher_selected_properties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbTitleText="@string/select_properties" />
            </LinearLayout>
            <TextView
                style="@style/TextLightBlackTheme"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/receive_property"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:background="@drawable/shape_circle_white_bg">
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbTitleText="@string/name"
                    app:fcbBoxType="rectangle"
                    app:fcbChecked="true"/>
                <View
                    style="@style/CommonItemLine"/>
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_user_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbBoxType="rectangle"
                    app:fcbChecked="true"
                    app:fcbTitleText="@string/birthday"/>
                <View
                    style="@style/CommonItemLine"/>
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_user_nation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbBoxType="rectangle"
                    app:fcbChecked="true"
                    app:fcbTitleText="@string/nation"/>
                <View
                    style="@style/CommonItemLine"/>
                <com.inspur.lib_base.view.FlexibleCheckBox
                    android:id="@+id/cb_user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fcbBoxType="rectangle"
                    app:fcbChecked="true"
                    app:fcbTitleText="@string/location"/>
            </LinearLayout>


            <Button
                android:id="@+id/btn_request"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shape_circle_blue_bg"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>