<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/include_label"
        layout="@layout/include_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>



    <include
        android:id="@+id/include_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/include_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        layout="@layout/include_login_verification_code_card_view"/>



    <TextView
        android:id="@+id/btn_switch_page"
        style="@style/ButtonTheme"
        android:text="@string/pwd_login"
        android:textSize="14sp"
        android:drawableRight="@mipmap/arrow"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="@id/include_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/include_text_input_layout" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonTheme"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_switch_page"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_circle_translucent_white_bg"
        android:text="@string/login"
        android:textColor="@color/colorPrimary" />
    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonTheme"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register_new_user"
        android:textColor="@color/colorAccent" />
    <View
        style="@style/CommonLine"
        android:background="@color/color_7FFFFFFF"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>