<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.inspur.lib_base.view.TitleView
        android:id="@+id/title_request_voucher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:ttTitleText="@string/request"
        app:ttLeftDrawable="@mipmap/ic_nav_back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_request_voucher">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextLightBlackTheme"
                android:layout_marginBottom="8dp"
                android:text="@string/voucher"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:background="@drawable/shape_circle_white_bg">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_voucher_id_card"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layoutDirection="rtl"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_333333"
                    android:button="@drawable/selector_common_checkbox"
                    android:text="@string/id_card"
                    android:checked="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    tools:targetApi="jelly_bean_mr1" />
                <View
                    style="@style/CommonItemLine"/>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_voucher_drive_card"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layoutDirection="rtl"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_333333"
                    android:button="@drawable/selector_common_checkbox"
                    android:text="@string/drive_card"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:checked="false"
                    tools:targetApi="jelly_bean_mr1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:background="@drawable/shape_circle_white_bg">
                <include
                    android:id="@+id/include_user_name"
                    layout="@layout/include_item_input_info"/>
                <View
                    style="@style/CommonItemLine"/>
                <include
                    android:id="@+id/include_user_sex"
                    layout="@layout/include_item_choice_point"/>
                <View
                    style="@style/CommonItemLine"/>
                <include
                    android:id="@+id/include_user_birthday"
                    layout="@layout/include_item_choice_point"/>
                <View
                    style="@style/CommonItemLine"/>
                <include
                    android:id="@+id/include_user_nation"
                    layout="@layout/include_item_input_info"/>
                <View
                    style="@style/CommonItemLine"/>
                <include
                    android:id="@+id/include_user_location"
                    layout="@layout/include_item_input_info"/>
                <View
                    style="@style/CommonItemLine"/>
                <include
                    android:id="@+id/include_user_id_card_num"
                    layout="@layout/include_item_input_info"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:orientation="vertical"
                android:background="@drawable/shape_circle_white_bg">
                <include
                    android:id="@+id/include_user_voucher_description"
                    layout="@layout/include_item_input_info"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_request"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_marginTop="21dp"
                android:background="@drawable/shape_circle_translucent_blue_bg"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>